5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1594_1804.log
== TEST (2019-04-10 22:32:23) 
-- CODE:
xa=float(input("ponto Xa: "))
ya=float(input("ponto Ya: "))
xb=float(input("ponto Xb: "))
yb=float(input("ponto Yb: "))
D=sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(D,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D=sqrt((xb-xa)**2 + (yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:33:02) 
-- CODE:
xa=float(input("ponto Xa: "))
ya=float(input("ponto Ya: "))
xb=float(input("ponto Xb: "))
yb=float(input("ponto Yb: "))
from math import *
D=sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(D,3))

-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:33:28) 
-- CODE:
xa=float(input("ponto Xa: "))
ya=float(input("ponto Ya: "))
xb=float(input("ponto Xb: "))
yb=float(input("ponto Yb: "))
from math import *
D=sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(D,3))

-- EXECUTION TIME:
0.128648
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
